--- a/SECURE-iT-Yourself/MainPage/MainWindow.xaml
+++ b/SECURE-iT-Yourself/MainPage/MainWindow.xaml
@@ -5,13 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MainPage"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="SECURe-It-Yourself" Height="450" Width="800" Background="White">
     <Grid Margin="0,0,-0.4,0">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="61*"/>
-            <RowDefinition Height="400"/>
-        </Grid.RowDefinitions>
-
 
     </Grid>
 </Window>
