Did some new stuff

--- a/SECURE-iT-Yourself/MainPage/MainWindow.xaml
+++ b/SECURE-iT-Yourself/MainPage/MainWindow.xaml
@@ -8,9 +8,10 @@
         Title="SECURe-It-Yourself" Height="600" Width="900" Background="White">
     <Grid Background="#25315D">
         <StackPanel Width="120" HorizontalAlignment="Left">
-            <Button Width="120" Height="30" Background="#25315D" Foreground="White" BorderBrush="#25315D" Click="Button_Click">
-                <Image> 
-                </Image>
+            <Button Width="120" Height="30">
+                <WrapPanel Orientation="Horizontal">
+                    
+                </WrapPanel>
             </Button>
         </StackPanel>
     </Grid>
