--- a/SECURE-iT-Yourself/MainPage/MainWindow.xaml
+++ b/SECURE-iT-Yourself/MainPage/MainWindow.xaml
@@ -5,14 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MainPage"
         mc:Ignorable="d"
-        Title="SECURe-It-Yourself" Height="600" Width="900" Background="White">
-    <Grid Background="#25315D">
+        Title="SECURe-It-Yourself" Height="600" Width="900" Background="{x:Null}">
+    <Grid Background="#404A56">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="120" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
         <StackPanel Width="120" HorizontalAlignment="Left">
-            <Button Width="120" Height="30">
-                <WrapPanel Orientation="Horizontal">
-                    
-                </WrapPanel>
+            <Button Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                    <Image Width="30" Height="30"  Source="Resources/img/black_arrow.png"/>
+                    <Label FontSize="15" Foreground="White">Back</Label>
+                </StackPanel>
             </Button>
         </StackPanel>
+        <Canvas Grid.Column="1">
+            <Label FontSize="30" Foreground="White" Canvas.Top="45" Canvas.Right="340">Network Forensic</Label>
+        </Canvas>
     </Grid>
 </Window>
