--- a/SECURE-iT-Yourself/MainPage/MainWindow.xaml
+++ b/SECURE-iT-Yourself/MainPage/MainWindow.xaml
@@ -21,7 +21,9 @@
         </StackPanel>
         <Canvas Grid.Column="1">
             <Label FontSize="30" Foreground="White" Canvas.Top="45" Canvas.Right="340">Network Forensic</Label>
-            
+            <Button>
+                
+            </Button>
         </Canvas>
     </Grid>
 </Window>
