--- a/SECURE-iT-Yourself/MainPage/App.xaml
+++ b/SECURE-iT-Yourself/MainPage/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MainPage"
-             StartupUri="MainWindow.xaml">
+             StartupUri="SY_NetworkStart.xaml">
     <Application.Resources>
          
     </Application.Resources>
