--- a/SECURE-iT-Yourself/MainPage/Beck_NC.xaml
+++ b/SECURE-iT-Yourself/MainPage/Beck_NC.xaml
@@ -33,5 +33,8 @@
             <Label Grid.Column="1" Content="Description" />
             <Label Grid.Column="2" Content="How well is it configured?" />
         </Grid>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="390" Margin="6,191,0,0" VerticalAlignment="Top" Width="217"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="390" Margin="223,191,0,0" VerticalAlignment="Top" Width="249" Grid.ColumnSpan="2"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="390" Margin="172,191,0,0" VerticalAlignment="Top" Width="231" Grid.ColumnSpan="2" Grid.Column="1"/>
     </Grid>
 </Window>
