--- a/SECURE-iT-Yourself/MainPage/SY_NewCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NewCase.xaml
@@ -9,7 +9,7 @@
     <Grid Background="#404A56" >
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="400"/>
+                <ColumnDefinition Width="500"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid Background="#9CCAE0">
@@ -17,7 +17,6 @@
                     <RowDefinition Height="50"/>
                     <RowDefinition Height="60"/>
                     <RowDefinition Height="*" />
-                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
                 <Button Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
@@ -31,6 +30,32 @@
                     <Rectangle Canvas.Top="5" Height="50" Width="320" Fill="#25315D" Panel.ZIndex="0" ></Rectangle>
                     <Label Canvas.Top="7" Canvas.Left="80" Foreground="White" FontSize="25">Network Description</Label>
                 </Canvas>
+                <Grid Grid.Row="2" Margin="10" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <Label HorizontalAlignment="Right" FontSize="20">Case Name: </Label>
+                    <TextBox Width="230" Grid.Column="1" Margin="0,0,0,0"></TextBox>
+                    <Label HorizontalAlignment="Right" Grid.Row="1" FontSize="20">Case Description: </Label>
+                    <TextBox Height="120" Margin="0,12,0,12" Grid.Column="1" Grid.Row="1"></TextBox>
+                    <Label Margin="0,0,0,0" HorizontalAlignment="Right" FontSize="20" Grid.Row="3">Investigated By:</Label>
+                    <TextBox VerticalAlignment="Top" Margin="0,0,0,0" Height="40" Grid.Row="3" Grid.Column="1"  ></TextBox>
+                    <StackPanel Margin="10,0,0,0" Height="100" Grid.Column="2" Grid.Row="3">
+                        <Button >Add</Button>
+                    </StackPanel>
+                
+                </Grid>
+                        
             </Grid>
          </Grid>
     </Grid>
