--- a/SECURE-iT-Yourself/MainPage/SY_NewCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NewCase.xaml
@@ -8,6 +8,9 @@
         Title="SECURe-IT-Yourself" Height="600" Width="900" ResizeMode="NoResize">
     <Grid Background="#404A56" >
         <Grid>
+            <Grid.Background>
+                <ImageBrush ImageSource="pack://application:,,,/Resources/img/background_forensic.jpg" Opacity="0.45" />
+            </Grid.Background>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="500"/>
                 <ColumnDefinition Width="*"/>
@@ -40,23 +43,34 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
+                        
                     </Grid.RowDefinitions>
 
-                    <Label HorizontalAlignment="Right" FontSize="20">Case Name: </Label>
+                    <Label HorizontalAlignment="Right" FontSize="20">Case Name:</Label>
                     <TextBox Width="230" Grid.Column="1" Margin="0,0,0,0"></TextBox>
-                    <Label HorizontalAlignment="Right" Grid.Row="1" FontSize="20">Case Description: </Label>
+                    <Label HorizontalAlignment="Right" Grid.Row="1" FontSize="20">Case Description:</Label>
                     <TextBox Height="120" Margin="0,12,0,12" Grid.Column="1" Grid.Row="1"></TextBox>
-                    <Label Margin="0,0,0,0" HorizontalAlignment="Right" FontSize="20" Grid.Row="3">Investigated By:</Label>
-                    <TextBox VerticalAlignment="Top" Margin="0,0,0,0" Height="40" Grid.Row="3" Grid.Column="1"  ></TextBox>
-                    <StackPanel Margin="10,0,0,0" Height="100" Grid.Column="2" Grid.Row="3">
-                        <Button >Add</Button>
+                    <Label Margin="0,0,0,0" HorizontalAlignment="Right" FontSize="20" Grid.Row="2">Investigated By:</Label>
+                    <StackPanel Grid.Row="2" Grid.Column="1" Grid.RowSpan="2">
+                        <ListBox Margin="0,0,0,0" Height="250">
+                            
+                        </ListBox>
                     </StackPanel>
-                
+                    <Button Background="ForestGreen" Margin="10,0,0,0" Grid.Row="2" Grid.Column="2" Height="40" Grid.RowSpan="3" VerticalAlignment="Top">Add</Button>
+                    <Grid Grid.Column="2" Grid.Row="3">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="150"/>
+                            <RowDefinition Height="50"/>
+                        </Grid.RowDefinitions>
+                        <StackPanel>
+                            <Button Cursor="Hand" Background="IndianRed" Margin="10,0,0,0" Grid.Row="2" Height="40">Delete</Button>
+                        </StackPanel>
+                        <Button Background="ForestGreen" Margin="10,0,0,0" Grid.Row="1">Next</Button>
+                    </Grid>
                 </Grid>
-                        
+
             </Grid>
-         </Grid>
+        </Grid>
     </Grid>
 </Window>
