--- a/SECURE-iT-Yourself/MainPage/SY_CreatedSuccessCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_CreatedSuccessCase.xaml
@@ -32,6 +32,8 @@
                     <ColumnDefinition Width="Auto" />
                     
                 </Grid.ColumnDefinitions>
+
+                <Image Grid.Column="1" ></Image>
             </Grid>
         </Grid>
     </Grid>
