Finished SY_CreatedSuccessCase with pictures
Removed picture to get a better one. Finished design of SY_CreatedSuccessCase

--- a/SECURE-iT-Yourself/MainPage/SY_CreatedSuccessCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_CreatedSuccessCase.xaml
@@ -27,13 +27,46 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
                     
                 </Grid.ColumnDefinitions>
+                <Image Margin="0,0,0,10" Height="150" Grid.Column="1" Source="pack://application:,,,/Resources/img/success.png"></Image>
+                <Label Margin="0,0,0,0" Width='250' HorizontalContentAlignment="Center" Grid.Row="1" Grid.Column="1"  FontSize="30" Foreground="White">
+                    <TextBlock HorizontalAlignment="Center" TextAlignment="Center" TextWrapping="WrapWithOverflow">
+                        Case Established Successfully
+                    </TextBlock>
+                </Label>
 
-                <Image Grid.Column="1" ></Image>
+                <Grid Grid.Row="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Button Cursor="Hand" Grid.Column="1" HorizontalContentAlignment="Center" FontSize="30">Home</Button>
+                                       
+                </Grid>
+
+                <Grid Grid.Row="2" Grid.Column="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Button Cursor="Hand" HorizontalContentAlignment="Center" FontSize="20">Forensic Page</Button>
+
+                </Grid>
+
             </Grid>
         </Grid>
     </Grid>
